--- a/templates/questionnaire.html
+++ b/templates/questionnaire.html
@@ -15,7 +15,7 @@
         <div class="container">
           <nav class="navbar navbar-expand-lg">
             <a class="navbar-brand" href="/">
-              <img src="/img" alt="image" height="42">
+              <img src="/img/logo.png" alt="image" height="42">
             </a>
     
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav5"
